tests/errors/encoding.pyx
# coding=ASCII
# mode: error

"""
Très bien.
"""

_ERRORS = u"""
5:3: Decoding error, missing or incorrect coding=<encoding-name> at top of source (cannot decode with encoding 'ascii': ordinal not in range(128))
"""
